# PotreeConverter

PotreeConverter/: CMakeLists.txt
PotreeConverter/src/: PotreeConverter.cpp  PotreeWriter.cpp
